--- a/package.json
+++ b/package.json
@@ -1,31 +1,38 @@
 {
   "name": "gpc-scenario-numbering",
   "version": "0.0.1",
-  "description": "Precompiler for Gherking",
+  "description": "This GherKing precompiler is responsible to add an index to all scenario and scenario outlines.",
   "main": "index.js",
   "types": "index.d.ts",
   "scripts": {
-    "test": "cross-env JEST_JUNIT_OUTPUT_DIR=./reports jest --coverage"
+    "build": "npm run buildUpdate && npm test && npm run typedoc",
+    "buildUpdate": "npm run clean && npm run compile && npm run copyToDist",
+    "copyToDist": "copyfiles -f *.txt *.md package.json dist",
+    "typedoc": "typedoc --out ./docs ./src && touch ./docs/.nojekyll",
+    "clean": "rimraf ./dist ./docs ./reports ./coverage",
+    "test": "cross-env JEST_JUNIT_OUTPUT_DIR=./reports jest --coverage",
+    "lint": "eslint . --ext .ts --fix",
+    "compile": "tsc && npm run lint"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/gherking/gpc-scenario-numbering.git"
   },
   "devDependencies": {
-    "@types/debug": "^4.1.5",
+    "@types/debug": "^4.1.7",
     "@types/jest": "^26.0.20",
-    "@types/node": "^14.14.21",
-    "@typescript-eslint/eslint-plugin": "^4.14.1",
-    "@typescript-eslint/parser": "^4.14.1",
+    "@types/node": "^17.0.8",
+    "@typescript-eslint/eslint-plugin": "^5.9.0",
+    "@typescript-eslint/parser": "^5.9.0",
     "copyfiles": "^2.4.1",
     "cross-env": "^7.0.3",
-    "eslint": "^7.19.0",
+    "eslint": "^8.6.0",
     "jest": "^26.6.3",
-    "jest-junit": "^12.0.0",
+    "jest-junit": "^13.0.0",
     "rimraf": "^3.0.2",
     "ts-jest": "^26.4.4",
-    "typedoc": "^0.20.16",
-    "typescript": "^4.1.3"
+    "typedoc": "^0.22.10",
+    "typescript": "4.4.4"
   },
   "engines": {
     "node": ">=12.0.0"
@@ -33,7 +40,7 @@
   "dependencies": {
     "debug": "^4.3.1",
     "gherkin-ast": "^3.1.0",
-    "gherking": "1.0.0-beta.6"
+    "gherking": "1.0.0-beta.16"
   },
   "keywords": [
     "Gherking",
